--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
     "require": {
-        "slim/slim": "^3.12"
+        "slim/slim": "^3.12",
+        "illuminate/database": "~5.1",
+        "webmozart/assert": "^1.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        },
+        "files":[
+            "src/functions/helpers.php"
+        ]
     }
 }
