--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "^3.12",
         "illuminate/database": "~5.1",
-        "webmozart/assert": "^1.4"
+        "webmozart/assert": "^1.4",
+        "league/fractal": "^0.18.0"
     },
     "autoload": {
         "psr-4": {
