--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "slim/slim": "^3.12",
         "illuminate/database": "~5.1",
         "webmozart/assert": "^1.4",
-        "league/fractal": "^0.18.0"
+        "league/fractal": "^0.18.0",
+        "firebase/php-jwt": "^5.0"
     },
     "autoload": {
         "psr-4": {
