--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "illuminate/database": "~5.1",
         "webmozart/assert": "^1.4",
         "league/fractal": "^0.18.0",
-        "firebase/php-jwt": "^5.0"
+        "firebase/php-jwt": "^5.0",
+        "vlucas/phpdotenv": "^3.3"
     },
     "autoload": {
         "psr-4": {
